# canvas-reminder

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-reminder.yml
canvas_reminder/: __init__.py  canvas_client.py  cli.py  config.py  emailer.py  reminder.py
tests/: test_canvas_client.py  test_reminder.py
